PCS BAckup 26Dec2023/Backup-Source/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Wbad_VIR__c</fullName>
        <label>Group VIP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pricing_Strategy__c</fullName>
        <label>Pricing Strategy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>Primary_Contact__r.Phone</formula>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Primary Contact for SRX Users</description>
        <inlineHelpText>Select Primary Contact for this Account</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Primary Accounts</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Id__c</fullName>
        <label>Production Is</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quip_URL__c</fullName>
        <label>Quip URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RCA__c</fullName>
        <label>RCA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rebate_Type__c</fullName>
        <label>Rebate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gross</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Number__c</fullName>
        <label>Record Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <label>Reference Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Regional_IDN__c</fullName>
        <label>Regional IDN</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risks_and_Challenges__c</fullName>
        <label>Risks and Challenges</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Routing__c</fullName>
        <inlineHelpText>This is used for visits</inlineHelpText>
        <label>Routing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Id__c</fullName>
        <description>This field only used for Definitive Records and this Data coming from DHC</description>
        <label>SAP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <label>Sales Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta/Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>GPO</fullName>
                    <default>true</default>
                    <label>GPO</label>
                </value>
                <value>
                    <fullName>HC Pharmacy &amp; Buffalo, NY</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Mid Atlantic</fullName>
                </value>
                <value>
                    <fullName>Mid South</fullName>
                </value>
                <value>
                    <fullName>N. CA &amp; N. NV</fullName>
                </value>
                <value>
                    <fullName>National Account Manager</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>North Central</fullName>
                </value>
                <value>
                    <fullName>North East</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>NYC</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
                <value>
                    <fullName>RX</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>South Central</fullName>
                </value>
                <value>
                    <fullName>South East</fullName>
                </value>
                <value>
                    <fullName>South West</fullName>
                </value>
                <value>
                    <fullName>Telesales</fullName>
                </value>
                <value>
                    <fullName>White Space</fullName>
                </value>
                <value>
                    <fullName>Mid West</fullName>
                </value>
                <value>
                    <fullName>US Territories</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Account_Cooling_Period_Days_rcrd__c</fullName>
        <description>This field only used for report</description>
        <formula>IF(Phoenix_Account_Cooling_Period__c &lt;&gt; 0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Account Cooling Period (Days) rcrd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Account_Overview_Records__c</fullName>
        <description>This field only used for reports</description>
        <label>Total Account Overview Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Account_Strategy_Records__c</fullName>
        <description>This field only used for reports</description>
        <label>Total Account Strategy Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Customer_Est_Market_Share_records__c</fullName>
        <description>This field only used for report</description>
        <formula>IF(Phoenix_Customer_Est_Market_Share__c &lt;&gt; 0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Customer Est Market Share records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Customer_Max_Est_Share_of_Wallet_r__c</fullName>
        <description>This field only used for Reports</description>
        <formula>IF(Phoenix_Customer_Max_Est_Share_of_Wallet__c &lt;&gt; 0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cust Max Est Share of Wallet rcrds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Customer_s_Buying_Strategy__c</fullName>
        <description>This field only used for reports</description>
        <label>Total Customer&apos;s Buying Strategy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Growth_Goals_Records__c</fullName>
        <description>This field only used for reports</description>
        <label>Total Growth Goals Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Risks_Challenges_Records__c</fullName>
        <description>This field only used for Report</description>
        <label>Total Risks &amp; Challenges Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Credentialing__c</fullName>
        <label>Vendor Credentialing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>REPtrax</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>VCS</fullName>
                </value>
                <value>
                    <fullName>Vendormate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_OTC_Filtered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OTC Filtered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_OTC_Filtered_in_Relevance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vision OTC Filtered in Relevance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Rx_Filtered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rx Filtered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Rx_Filtered_in_Relevance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rx Filtered in Relevance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Rx_SRx_OTC__c</fullName>
        <label>Rx/SRx/OTC</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>SRx</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_SRx_Filtered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SRx Filtered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_SRx_Filtered_in_Relevance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SRx Filtered in Relevance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_is_SRx_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is SRx Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wholesaler1_Notes__c</fullName>
        <label>Wholesaler #1 Notes</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler1__c</fullName>
        <label>Wholesaler #1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AmerisourceBergen</fullName>
                </value>
                <value>
                    <fullName>HPG</fullName>
                </value>
                <value>
                    <fullName>McKesson</fullName>
                </value>
                <value>
                    <fullName>Novation</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>ASD Specialty Healthcare</fullName>
                </value>
                <value>
                    <fullName>Cardinal</fullName>
                </value>
                <value>
                    <fullName>Oncology Supply</fullName>
                </value>
                <value>
                    <fullName>Morris &amp; Dickson</fullName>
                </value>
                <value>
                    <fullName>HD Smith</fullName>
                </value>
                <value>
                    <fullName>Anda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wholesaler2_Notes__c</fullName>
        <label>Wholesaler #2 Notes</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Wholesaler2__c</fullName>
        <label>Wholesaler #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AmerisourceBerger</fullName>
                </value>
                <value>
                    <fullName>HPG</fullName>
                </value>
                <value>
                    <fullName>McKesson</fullName>
                </value>
                <value>
                    <fullName>Novation</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>ASD Specialty Healthcare</fullName>
                </value>
                <value>
                    <fullName>Cardinal</fullName>
                </value>
                <value>
                    <fullName>Morris &amp; Dickson</fullName>
                </value>
                <value>
                    <fullName>Oncology Supply</fullName>
                </value>
                <value>
                    <fullName>HD Smith</fullName>
                </value>
                <value>
                    <fullName>Anda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wholesaler_DC_1__c</fullName>
        <label>Wholesaler #1 DC</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Wholesaler1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Amityville, NY</fullName>
                </value>
                <value>
                    <fullName>Anchorage, AK</fullName>
                </value>
                <value>
                    <fullName>Atlanta, GA</fullName>
                </value>
                <value>
                    <fullName>Auburn, WA</fullName>
                </value>
                <value>
                    <fullName>Aurora, CO</fullName>
                </value>
                <value>
                    <fullName>Aurora, IL</fullName>
                </value>
                <value>
                    <fullName>Bethlehem, PA</fullName>
                </value>
                <value>
                    <fullName>Birmingham, AL</fullName>
                </value>
                <value>
                    <fullName>Boston, MA</fullName>
                </value>
                <value>
                    <fullName>Buffalo, NY</fullName>
                </value>
                <value>
                    <fullName>Carol Stream, IL</fullName>
                </value>
                <value>
                    <fullName>Carson, CA</fullName>
                </value>
                <value>
                    <fullName>Chicago, IL</fullName>
                </value>
                <value>
                    <fullName>Clear Lake, IA</fullName>
                </value>
                <value>
                    <fullName>Columbus, OH</fullName>
                </value>
                <value>
                    <fullName>Conroe, TX</fullName>
                </value>
                <value>
                    <fullName>Corona, CA</fullName>
                </value>
                <value>
                    <fullName>Dallas, TX</fullName>
                </value>
                <value>
                    <fullName>Delran, NJ</fullName>
                </value>
                <value>
                    <fullName>Denver, CO</fullName>
                </value>
                <value>
                    <fullName>Detroit, MI</fullName>
                </value>
                <value>
                    <fullName>Elk Grove, CA</fullName>
                </value>
                <value>
                    <fullName>Everett, WA</fullName>
                </value>
                <value>
                    <fullName>Flower Mound, TX</fullName>
                </value>
                <value>
                    <fullName>Greensboro, NC</fullName>
                </value>
                <value>
                    <fullName>Groveport, OH (NLC)</fullName>
                </value>
                <value>
                    <fullName>Hawaii, HI</fullName>
                </value>
                <value>
                    <fullName>Honolulu, HI</fullName>
                </value>
                <value>
                    <fullName>Houston, TX</fullName>
                </value>
                <value>
                    <fullName>Kansas City, MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wholesaler_DC_2__c</fullName>
        <label>Wholesaler #2 DC</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Wholesaler2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Amityville, NY</fullName>
                </value>
                <value>
                    <fullName>Anchorage, AK</fullName>
                </value>
                <value>
                    <fullName>Atlanta, GA</fullName>
                </value>
                <value>
                    <fullName>Auburn, WA</fullName>
                </value>
                <value>
                    <fullName>Aurora, CO</fullName>
                </value>
                <value>
                    <fullName>Aurora, IL</fullName>
                </value>
                <value>
                    <fullName>Bethlehem, PA</fullName>
                </value>
                <value>
                    <fullName>Birmingham, AL</fullName>
                </value>
                <value>
                    <fullName>Boston, MA</fullName>
                </value>
                <value>
                    <fullName>Buffalo, NY</fullName>
                </value>
                <value>
                    <fullName>Carol Stream, IL</fullName>
                </value>
                <value>
                    <fullName>Carson, CA</fullName>
                </value>
                <value>
                    <fullName>Chicago, IL</fullName>
                </value>
                <value>
                    <fullName>Clear Lake, IA</fullName>
                </value>
                <value>
                    <fullName>Columbus, OH</fullName>
                </value>
                <value>
                    <fullName>Conroe, TX</fullName>
                </value>
                <value>
                    <fullName>Corona, CA</fullName>
                </value>
                <value>
                    <fullName>Dallas, TX</fullName>
                </value>
                <value>
                    <fullName>Delran, NJ</fullName>
                </value>
                <value>
                    <fullName>Denver, CO</fullName>
                </value>
                <value>
                    <fullName>Detroit, MI</fullName>
                </value>
                <value>
                    <fullName>Elk Grove, CA</fullName>
                </value>
                <value>
                    <fullName>Everett, WA</fullName>
                </value>
                <value>
                    <fullName>Flower Mound, TX</fullName>
                </value>
                <value>
                    <fullName>Greensboro, NC</fullName>
                </value>
                <value>
                    <fullName>Groveport, OH (NLC)</fullName>
                </value>
                <value>
                    <fullName>Hawaii, HI</fullName>
                </value>
                <value>
                    <fullName>Honolulu, HI</fullName>
                </value>
                <value>
                    <fullName>Houston, TX</fullName>
                </value>
                <value>
                    <fullName>Kansas City, MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wholesaler_Distribution_Center_City__c</fullName>
        <label>Wholesaler Distribution Center City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Wholesaler__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ANCHORAGE</fullName>
                </value>
                <value>
                    <fullName>ANOKA</fullName>
                </value>
                <value>
                    <fullName>AUBURN</fullName>
                </value>
                <value>
                    <fullName>AURORA</fullName>
                </value>
                <value>
                    <fullName>BETHLEHEM</fullName>
                </value>
                <value>
                    <fullName>BROOKS</fullName>
                </value>
                <value>
                    <fullName>BUFORD</fullName>
                </value>
                <value>
                    <fullName>CAREY</fullName>
                </value>
                <value>
                    <fullName>CLEAR LAKE</fullName>
                </value>
                <value>
                    <fullName>CONROE</fullName>
                </value>
                <value>
                    <fullName>CORONA</fullName>
                </value>
                <value>
                    <fullName>DENVER</fullName>
                </value>
                <value>
                    <fullName>DES MOINES</fullName>
                </value>
                <value>
                    <fullName>DOTHAN</fullName>
                </value>
                <value>
                    <fullName>DULUTH</fullName>
                </value>
                <value>
                    <fullName>DUNCANSVILLE</fullName>
                </value>
                <value>
                    <fullName>DURHAM</fullName>
                </value>
                <value>
                    <fullName>ELK GROVE</fullName>
                </value>
                <value>
                    <fullName>EL TROCHE CAGUAS</fullName>
                </value>
                <value>
                    <fullName>FARGO</fullName>
                </value>
                <value>
                    <fullName>GLEN ALLEN</fullName>
                </value>
                <value>
                    <fullName>GRANDVIEW HEIGHTS</fullName>
                </value>
                <value>
                    <fullName>GREENSBORO</fullName>
                </value>
                <value>
                    <fullName>GROVEPORT</fullName>
                </value>
                <value>
                    <fullName>GUAYNABO</fullName>
                </value>
                <value>
                    <fullName>HOLLAND</fullName>
                </value>
                <value>
                    <fullName>HOLT</fullName>
                </value>
                <value>
                    <fullName>HONOLULU</fullName>
                </value>
                <value>
                    <fullName>HUDSON</fullName>
                </value>
                <value>
                    <fullName>JEFFERSONVILLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wholesaler_Price_Percent__c</fullName>
        <label>Wholesaler Price %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <label>Wholesaler</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMERISOURCEBERGEN CORPORATION</fullName>
                </value>
                <value>
                    <fullName>ANDA GENERICS</fullName>
                </value>
                <value>
                    <fullName>CAPITAL WHOLESALE DRUG CO</fullName>
                </value>
                <value>
                    <fullName>CARDINAL HEALTH</fullName>
                </value>
                <value>
                    <fullName>DAKOTA DRUG</fullName>
                </value>
                <value>
                    <fullName>DROGUERIA BETANCES, INC</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA WHOLESALE DRUG</fullName>
                </value>
                <value>
                    <fullName>MCKESSON CORPORATION</fullName>
                </value>
                <value>
                    <fullName>MORRIS &amp; DICKSON</fullName>
                </value>
                <value>
                    <fullName>NORTH CAROLINA MUTUAL WHOLESALE DRUG CO</fullName>
                </value>
                <value>
                    <fullName>PRESCRIPTION SUPPLY</fullName>
                </value>
                <value>
                    <fullName>QUALITY CARE PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>SMITH DRUG COMPANY</fullName>
                </value>
                <value>
                    <fullName>VALUE DRUG COMPANY (PA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X340b_Facility__c</fullName>
        <label>340b Facility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency_DefHC_Primary_GPO_ID__c</fullName>
        <label>DHC Primary GPO ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency_DefHC_Primary_GPO_Name__c</fullName>
        <label>DHC Primary GPO Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DHC_ID_Holder__c</fullName>
        <label>DHC ID Holder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Address1__c</fullName>
        <label>DHC Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_Address__c</fullName>
        <label>DHC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_AffiliationsACO__c</fullName>
        <label>DHC ACO Affiliations</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_AffiliationsGPO__c</fullName>
        <label>DHC GPO/Pharm/RPC Affiliations</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_AvgDailyCensus__c</fullName>
        <label>DHC Avg. Daily Census</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_AvgLengthOfStay__c</fullName>
        <label>DHC Avg. Length of Stay</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_CashOnHand__c</fullName>
        <label>DHC Cash on Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_DateCreated__c</fullName>
        <label>DHC Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_DaysCashOnHand__c</fullName>
        <label>DHC Days Cash On Hand</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_EMR_Vendor_Ambulatory__c</fullName>
        <label>DHC EMR Vendor Ambulatory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_EMR_Vendor_Inpatient__c</fullName>
        <label>DHC EMR Vendor Inpatient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_FinancialDataDate__c</fullName>
        <description>Financial Data update date</description>
        <label>DHC Financial Data Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_FirmType__c</fullName>
        <label>DHC Firm Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_HIEAffiliations__c</fullName>
        <label>DHC HIE Affiliations</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>texcellency__DefHC_HQCity__c</fullName>
        <label>DHC City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>